--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -11,4 +11,4 @@ jobs:
                 echo "::group::My Group Message"
                 echo "Message 1"
                 echo "Message 2"
-                ech "::endgroup::"
+                echo "::endgroup::"
